--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   "dependencies": {
     "express": "4.x",
     "socket.io": "1.x"
+  },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.4.x"
   }
 }
