--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "express": "4.x",
-    "socket.io": "1.x"
+    "socket.io": "1.x",
+    "redis": "0.x"
   },
   "engines": {
     "node": "0.10.x",
